# wecom

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  pyproject.toml
src/wecom/: __init__.py  dependencies.py  main.py
src/wecom/config/: __init__.py  dev.env.example  prod.env.example  settings.py
src/wecom/core/: auth.py  client.py  services.py
src/wecom/db/: __init__.py  crud.py  database.py  models.py
src/wecom/models/: subscription_models.py
src/wecom/routers/: auth.py  notify.py
tests/: conftest.py  test_auth.py  test_config.py  test_database.py
