[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wecom"
version = "0.1.0"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "requests>=2.28.2",
    "python-dotenv>=0.21.0",
    "cryptography>=39.0.1",
    "pydantic>=1.10.4",
    "celery>=5.2.7",
    "redis>=4.5.4"
]

[tool.setuptools.packages.find]
where = ["src"]