[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wecom"
version = "0.1.0"
description = "企业微信微服务"
authors = [{name = "杜荣政", email = "drz@easyman.com.cn"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["wecom", "microservice", "notification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.5",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=0.21.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.2",
    "redis>=4.5.4",
    "celery>=5.2.7",
    "cryptography>=39.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.23.0",
    "pytest-asyncio>=0.20.0",
    "python-multipart>=0.0.5",
    "ipdb>=0.13.9",
    "flake8>=5.0.0"
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.1.0"
]
alembic = [
    "alembic>=1.10.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wecom.config" = ["*.env"]